# gene-onology-term-mapper

./: .gitignore  Dockerfile  Makefile  Makefile.common  README.md  TUTORIAL.md  go_term_fetcher.py  pyproject.toml  run.sh  service.json  service.py  visualiser.py
my_app/: service.py  visualiser.py
tests/: two_bp.json
