[tool.poetry]
name = "gene-onology-term-mapper"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.111.1", extras = ["standard"]}
httpx = "^0.27.0"
networkx = "^3.3"
ivcap-ai-tool = "^0.6.0"
ivcap-fastapi = "^0.3.0"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
mypy = "^1.0"
flake8 = "^5.0"
black = "^22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
