[project]
name = "gene-onology-term-mapper"
version = "0.1.0"
description = "a tool to Maps genes or proteins to GO terms using a local or remote database"
authors = [
    {name = "Max Ott",email = "max.ott@data61.csiro.au"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "ivcap-ai-tool (>=0.7.1,<0.8.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
