[project]
name = "gene-onology-term-mapper"
version = "0.1.1"
description = "a tool to Maps genes or proteins to GO terms using a local or remote database"
authors = [
    {name = "Max Ott",email = "max.ott@data61.csiro.au"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "ivcap-ai-tool (>=0.7.9,<0.8.0)",
]

[tool.poetry-plugin-ivcap]
service-file = "my_app/service.py"
service-type = "lambda"
port = 8077

#>> you may set the service ID to a speciifc one if adapting an existing one
# service-id = "urn:ivcap:service:ac158a1f-dfb4-5dac-bf2e-9bf15e0f2cc7"

#>> Uncomment the following if you want to make the service public
#policy = "urn:ivcap:policy:ivcap.open.metadata"

#>> docker overrides
#docker-run-opts = ["--port", "9999" ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
